<resources>
    <string name="app_name">Pokedex</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_regions">Regions</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="pk_generations">%1$d Generation</string>
    <string name="pk_id">#%1$d</string>


    <string name="menu_home">Home View</string>
    <string name="menu_pokedex">Pokedex</string>

    <string name="pokemons">Pokemons</string>

    <!-- Pokemon Details String -->

    <string name="title_weight">Weight</string>
    <string name="title_height">Height</string>
    <string name="title_category">Category</string>
    <string name="title_ability">Ability</string>
    <string name="title_evolutiions">Evolutions</string>
    <string name="title_stats">Stats</string>
    <string name="title_hp">Hp</string>
    <string name="title_exp">Experience</string>
    <string name="title_spd">Speed</string>
    <string name="title_def">Defence</string>
    <string name="title_atk">Attack</string>
    <string name="search_button">Search button</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="pokemon">Pokemon</string>
    <string name="water">Water</string>
    <string name="fire">Fire</string>
    <string name="bug">Bug</string>
    <string name="ghost">Ghost</string>
    <string name="grass">Grass</string>
    <string name="ground">Ground</string>
    <string name="rock">Rock</string>
    <string name="dark">Dark</string>
    <string name="dragon">Dragon</string>
    <string name="electric">Electric</string>
    <string name="fairy">Fairy</string>
    <string name="fighting">Fighting</string>
    <string name="ice">Ice</string>
    <string name="normal">Normal</string>
    <string name="psychic">Psychic</string>
    <string name="flying">Flying</string>
    <string name="poison">Poison</string>
    <string name="steel">Steel</string>
    <string name="exact_types_only">Exact types only</string>
    <string name="pokedex">Pokedex</string>
    <string name="credit">João Pires - A47471</string>
</resources>