<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="dam_a47471.pokedex.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="dam_a47471.pokedex.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="dam_a47471.pokedex.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_regions"
        android:name="dam_a47471.pokedex.ui.region.RegionFragment"
        android:label="@string/menu_regions"
        tools:layout="@layout/fragment_region" >
        <action
            android:id="@+id/action_nav_regions_to_nav_pokemon"
            app:destination="@id/nav_pokemon" />
    </fragment>

    <fragment
        android:id="@+id/nav_pokemon"
        android:name="dam_a47471.pokedex.ui.pokemon.PokemonsFragment"
        android:label="@string/pokemons"
        tools:layout="@layout/fragment_pokemons">
        <action
            android:id="@+id/action_nav_pokemon_to_pokemonDetail"
            app:destination="@id/pokemonDetail" />
    </fragment>

    <fragment
        android:id="@+id/pokemonDetail"
        android:name="dam_a47471.pokedex.ui.pokemon.detail.PokemonDetailFragment"
        android:label="fragment_pokemon_detail2"
        tools:layout="@layout/fragment_pokemon_detail" />

</navigation>